# fastLowess-R

./: .Rbuildignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS  README.md  _pkgdown.yml  bioc-comments.md  cleanup  configure  cran-comments.md
.github/workflows/: bioc-check.yml  ci.yml
R/: fastLowess-package.R  rfastlowess-package.R  smooth.R  smooth_online.R  smooth_streaming.R  utils.R
benchmarks/: INTERPRETATION.md  compare_benchmark.py
benchmarks/R/: benchmark.R
benchmarks/base_R/: benchmark.R
benchmarks/benchmarks/output/: base_R_benchmark.json  fastLowess_benchmark.json
benchmarks/fastLowess/: benchmark.R
benchmarks/output/: base_R_benchmark.json  fastLowess_benchmark.json  fastlowess_benchmark.json  fastlowess_benchmark_serial.json  r_benchmark.json
demo/: batch_smoothing.R  online_smoothing.R  streaming_smoothing.R
examples/: batch_smoothing.R  online_smoothing.R  streaming_smoothing.R
inst/: AUTHORS  CITATION
man/: fastLowess-package.Rd  fastlowess-package.Rd  rfastlowess-package.Rd  smooth.Rd  smooth_online.Rd  smooth_streaming.Rd
scripts/: clean_checksums.py  prepare_cran.sh
src/: Cargo.toml  Makevars  Makevars.in  Makevars.win  dummy.c  lib.rs  vendor.tar.xz
src/cargo/: config.toml
tests/: testthat.R
tests/testthat/: test-smooth.R  test-smooth_online.R  test-smooth_streaming.R
validation/: INTERPRETATION.md  compare_validation.py
validation/base_R/: validate.R
validation/fastLowess/: validate.R
validation/output/: base_R_validate.json  fastLowess_validate.json
validation/output/fastlowess/: 01_tiny_linear.json  02_sine_standard.json  03_sine_robust.json  04_large_scale.json  05_high_smoothness.json  06_low_smoothness.json  07_constant.json  08_step_func.json  09_end_effects_left.json  10_end_effects_right.json  11_sparse_data.json  12_dense_data.json  13_iter_2.json  14_interpolate_exact.json  15_zero_variance.json
vignettes/: fastlowess-intro.Rmd
