[package]
name = "fastLowess-R"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"

# Metadata
description = "High-level, fast LOWESS smoothing built on top of the fastLowess Rust crate."
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

# Links
repository = "https://github.com/thisisamirv/fastLowess-R"
homepage = "https://github.com/thisisamirv/fastLowess-R"

# Categories
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

include = [
    "src/**/*",
    "docs/**/*.svg",
    "fastLowess/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# Build
[dependencies]
fastLowess = { version = "0.1", features = ["dev"] }
extendr-api = "0.8"

[lib]
name = "fastLowess"
crate-type = ["staticlib", "rlib"]

[features]
default = []
dev = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
