[package]
name = "fastLowess-R"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"

# Metadata
description = "High-level, fast LOWESS smoothing built on top of the fastLowess Rust crate."
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

# Links
repository = "https://github.com/thisisamirv/fastLowess-R"
homepage = "https://github.com/thisisamirv/fastLowess-R"

# Categories
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

include = ["Cargo.toml", "lib.rs", "vendor/**/*", "README.md", "LICENSE"]

# Build - use crates.io versions temporarily for vendoring
[dependencies]
fastLowess = { path = "vendor/fastLowess", version = "0.3", features = ["dev"] }
extendr-api = "0.8"

[lib]
name = "fastlowess"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
default = []
dev = []

[profile.release]
opt-level = 3
lto = false
codegen-units = 1

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]




[patch.crates-io]
lowess = { path = "vendor/lowess" }
